--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
   },
   "require": {
     "php": ">=7.0.8",
-    "composer-plugin-api": "^1.1"
+    "composer-plugin-api": "^1.1",
+    "drupal/core-file-security": "8.8.x-dev"
   }
 }
